test/corpus/sections.txt
==================
Basic section
==================

(c d e)

---

(root
  (section
    (note
      (prefix))
    (note
      (prefix))
    (note
      (prefix))))

==================
Section with args (inherited)
==================

(c d e):amp0.5

---

(root
  (section
    (note
      (prefix))
    (note
      (prefix))
    (note
      (prefix))
    (info
      (args
        (arg
          (arg_name)
          (number))))))

==================
Section with suffix
==================

(a b)sus:amp0.5

---

(root
  (section
    (note
      (prefix))
    (note
      (prefix))
    (suffix)
    (info
      (args
        (arg
          (arg_name)
          (number))))))

==================
Section repetition
==================

(a b)*2

---

(root
  (section
    (note
      (prefix))
    (note
      (prefix))
    (repeat
      (index))))

==================
Element args override section args
==================

(c:amp0.8 d e):amp0.5

---

(root
  (section
    (note
      (prefix)
      (info
        (args
          (arg
            (arg_name)
            (number)))))
    (note
      (prefix))
    (note
      (prefix))
    (info
      (args
        (arg
          (arg_name)
          (number))))))

==================
Empty section
==================

()

---

(root
  (section))

==================
Section with raw info (non-args)
==================

():fff

---

(root
  (section
    (info
      (args
        (arg
          (arg_name)
          (number
            (MISSING "index_token1")))))))

==================
Section with raw info falls back to top-level error
==================

(a b):ss*s

---

(root
  (section
    (note
      (prefix))
    (note
      (prefix)))
  (ERROR
    (arg_name)
    (operator)))
